--- a/QuestionsPinBox.ipynb
+++ b/QuestionsPinBox.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "**1. &#x1F5A9;** The work function of chromium is 4.40 eV.  What is the kinetic energy, in Joules, of electrons emitted from a chromium surface that is irradiated with ultraviolet radiation of wavelength 170 nm?\n",
         "\n",
-        "**Answer:** \n"
+        "**Answer:** 1.0082e-18\n"
       ]
     },
     {
@@ -52,7 +52,7 @@
         "-----\n",
         "**2. &#x1F5A9; What is the de Broglie wavelength of an electron moving at $1.2345 \\times 10^6 \\text{m/s}$ in nanometers?** (Relativistic effects are negligible here).\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** 2.058917"
       ]
     },
     {
@@ -88,7 +88,7 @@
         "|**C.** $\\;N=\\frac{4\\pi}{L^2}$ | **F.** $\\;N=\\frac{4\\pi}{L}$  |\n",
         "| | |\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** D"
       ]
     },
     {
@@ -107,7 +107,7 @@
         "| C. stay the same | F. none of the above|\n",
         "| | |\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** D"
       ]
     },
     {
@@ -126,7 +126,7 @@
         "| C. stay the same | F. none of the above|\n",
         "| | |\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** D"
       ]
     },
     {
@@ -147,7 +147,7 @@
         "|**D.** $\\; \\frac{a^2}{2n^2\\pi^2} - \\frac{2}{a}$|**H.** $\\; \\frac{a}{2}$|.|\n",
         "| | |\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** E"
       ]
     },
     {
@@ -165,7 +165,7 @@
         "| B. $\\;\\frac{n^2\\pi^2\\hbar^2}{2a^2}$  | E. $\\;\\frac{a}{2}$ |\n",
         "| C. $\\;\\frac{n\\pi\\hbar}{a}$           | F. $\\;0$ |\n",
         "\n",
-        "**Answer:** \n",
+        "**Answer:** A\n",
         "\n"
       ]
     },
@@ -192,7 +192,7 @@
         "|$C. \\;\\sqrt{\\frac{nh}{2a}}$|$F. \\;\\frac{2a}{nh}$|\n",
         "| | |\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** B"
       ]
     },
     {
@@ -210,7 +210,7 @@
         "$$\n",
         "**What is the length of the box corresponding to $k=0$ in atomic units (Bohr)?**\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** 15.42"
       ]
     },
     {
@@ -222,7 +222,7 @@
         "------\n",
         "**10. &#x1F5A9;** The lowest-energy absorption for a cyanine dye corresponds to the excitation from $n_\\text{HOMO}=k+3$ to $n_\\text{LUMO}=k+4$. **What is the lowest-energy absorption wavelength, in nm, for the box corresponding to $k=0$?**\n",
         "\n",
-        "**Answer:** "
+        "**Answer:** 313.658"
       ]
     },
     {
