--- a/QuestionsPinBox.ipynb
+++ b/QuestionsPinBox.ipynb
@@ -40,7 +40,7 @@
         "\n",
         "**1. &#x1F5A9;** The work function of chromium is 4.40 eV.  What is the kinetic energy, in Joules, of electrons emitted from a chromium surface that is irradiated with ultraviolet radiation of wavelength 170 nm?\n",
         "\n",
-        "**Answer:** 1.0082e-18\n"
+        "**Answer:** 1.00826e-18\n"
       ]
     },
     {
@@ -52,7 +52,7 @@
         "-----\n",
         "**2. &#x1F5A9; What is the de Broglie wavelength of an electron moving at $1.2345 \\times 10^6 \\text{m/s}$ in nanometers?** (Relativistic effects are negligible here).\n",
         "\n",
-        "**Answer:** 2.058917"
+        "**Answer:** 0.58917"
       ]
     },
     {
@@ -107,7 +107,7 @@
         "| C. stay the same | F. none of the above|\n",
         "| | |\n",
         "\n",
-        "**Answer:** D"
+        "**Answer:** E"
       ]
     },
     {
